# tiny_io_oi

./: .gitignore  Cargo.toml  LICENSE  PERF.md  ReadMe.md  SPEC.md  TODO.md
bun/: README.md  dsp.ts  index.ts  mock_aip.ts  ontology.ts  test.ts
crates/tiny-io-oi/: Cargo.toml
crates/tiny-io-oi-host/: Cargo.toml
crates/tiny-io-oi-host/src/: ffi.rs  lib.rs
crates/tiny-io-oi-macros/: Cargo.toml
crates/tiny-io-oi-macros/src/: lib.rs
crates/tiny-io-oi-tools/: Cargo.toml
crates/tiny-io-oi/src/: gateway.rs  hardware.rs  lib.rs  memory.rs  node.rs  std_impl.rs  unsafe_core.rs  vm.rs
crates/tiny-io-oi/src/ptp/: mod.rs
crates/tiny-io-oi/src/verifier/: mod.rs
esp32_firmware/: Cargo.toml
esp32_firmware/src/: main.rs
examples/: soldier_demo.rs
firmware/esp32/: Cargo.toml
firmware/esp32/.cargo/: config.toml
firmware/esp32/src/: main.rs
smart_geopin_roadshow/: README.md  inetel_pin.md
smart_geopin_roadshow/smart_geopin_ui/: Cargo.toml
smart_geopin_roadshow/smart_geopin_ui/src/: main.rs
smart_geopin_roadshow/smart_geopin_ui/static/: app.js  index.html  style.css
src/: drivers.rs  ffi.rs  lib.rs  node.rs  std_impl.rs  vm.rs
src/ptp/: mod.rs
tiny_io_oi_macros/src/: lib.rs
