[workspace]
members = [
    "crates/tiny-io-oi",
    "crates/tiny-io-oi-macros",
    "crates/tiny-io-oi-host",
    "crates/tiny-io-oi-tools",
    "smart_geopin_roadshow/smart_geopin_ui",
]

exclude = [
    "firmware/esp32",
]

[workspace.dependencies]
rkyv = { version = "0.7.46", default-features = false, features = ["alloc", "validation", "strict", "size_32"] }
bytecheck = { version = "0.6.12", default-features = false }
spin = "0.9"
libm = "0.2"
heapless = "0.8"
