[package]
name = "esp32_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c6", "unstable"] }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "panic-handler",
    "println",
], default-features = false }
esp-println = { version = "0.13.0", features = ["esp32c6", "jtag-serial"], default-features = false }
esp-bootloader-esp-idf = "0.1.0"
esp-alloc = { version = "0.8.0" }
esp-wifi = { version = "0.15.1", features = ["esp32c6", "esp-now", "wifi"] }
rkyv = { version = "0.7.46", default-features = false, features = ["alloc", "validation", "strict", "size_32"] }
tiny_io_oi = { package = "tiny_io_oi", path = "../../crates/tiny-io-oi", default-features = false, features = ["tiny-node"] }
getrandom = { version = "0.2.17", features = ["custom"] }
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
libm = "0.2"
embedded-io = { version = "0.6.1", default-features = false }

[features]
default = []
gateway = []
soldier = []

